# BirdPass

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: data1  data2  data3  pass
include/: AES.h  Deco.h  OS.h  TOTP.h  sm4.h
src/: AES.cpp  Deco.cpp  OS.cpp  TOTP.cpp  main.cpp  sm4.cpp
